--- a/.env.template
+++ b/.env.template
@@ -1,69 +1,69 @@
-# Your openai api key. (required)
+# 您的 openai api 密钥。必填
 OPENAI_API_KEY=sk-xxxx
 
-# Access password, separated by comma. (optional)
+# 访问密码，用逗号分隔。可选
 CODE=your-password
 
-# You can start service behind a proxy. (optional)
+# 可以通过代理启动服务。可选
 PROXY_URL=http://localhost:7890
 
-# (optional)
-# Default: Empty
-# Google Gemini Pro API key, set if you want to use Google Gemini Pro API.
-GOOGLE_API_KEY=
+# （可选）
+# 默认值：空
+# Google Gemini Pro API 密钥，如果要使用 Google Gemini Pro API，请设置此密钥。
+google_api_key=
 
-# (optional)
-# Default: https://generativelanguage.googleapis.com/
-# Google Gemini Pro API url without pathname, set if you want to customize Google Gemini Pro API url.
+# （可选）
+# 默认值：https://generativelanguage.googleapis.com/
+# 不含路径名的 Google Gemini Pro API 网址，如果要自定义 Google Gemini Pro API 网址，请进行设置。
 GOOGLE_URL=
 
-# Override openai api request base url. (optional)
-# Default: https://api.openai.com
-# Examples: http://your-openai-proxy.com
+# 覆盖 openai api 请求的基本 URL。可选
+# 默认值：https://api.openai.com
+# 示例：http://your-openai-proxy.com
 BASE_URL=
 
-# Specify OpenAI organization ID.(optional)
-# Default: Empty
+# 指定 OpenAI 组织 ID。
+# 默认值：空
 OPENAI_ORG_ID=
 
-# (optional)
-# Default: Empty
-# If you do not want users to use GPT-4, set this value to 1.
+# （可选）
+# 默认为空：空
+# 如果不想让用户使用 GPT-4，请将此值设为 1。
 DISABLE_GPT4=
 
-# (optional)
-# Default: Empty
-# If you do not want users to input their own API key, set this value to 1.
-HIDE_USER_API_KEY=
+# （可选）
+# 默认值：空
+# 如果不想让用户输入自己的 API 密钥，请将此值设为 1。
+hide_user_api_key=
 
-# (optional)
-# Default: Empty
-# If you do want users to query balance, set this value to 1.
-ENABLE_BALANCE_QUERY=
+# （可选）
+# 默认值：空
+# 如果希望用户查询余额，请将此值设为 1。
+enable_balance_query= 启用余额查询
 
-# (optional)
-# Default: Empty
-# If you want to disable parse settings from url, set this value to 1.
-DISABLE_FAST_LINK=
+# （可选）
+# 默认值：空
+# 如果要禁止从 url 解析设置，请将此值设为 1。
+disable_fast_link=
 
-# (optional)
-# Default: Empty
-# To control custom models, use + to add a custom model, use - to hide a model, use name=displayName to customize model name, separated by comma.
+# （可选）
+# 默认值：空
+# 控制自定义模型，使用 + 添加自定义模型，使用 - 隐藏模型，使用 name=displayName 自定义模型名称，以逗号分隔。
 CUSTOM_MODELS=
 
-# (optional)
-# Default: Empty
-# Change default model
+# （可选）
+# 默认值：空
+# 更改默认模型
 DEFAULT_MODEL=
 
-# anthropic claude Api Key.(optional)
-ANTHROPIC_API_KEY=
+# anthropic claude Api Key.（可选）
+anthropic_api_key=
 
-### anthropic claude Api version. (optional)
-ANTHROPIC_API_VERSION=
+### anthropic claude Api 版本。可选
+anthropic_api_version=
 
-### anthropic claude Api url (optional)
+### anthropic claude Api 网址（可选）
 ANTHROPIC_URL=
 
-### (optional)
-WHITE_WEBDAV_ENDPOINTS=
+###（可选）
+white_webdav_endpoints=
