Feature: Add model handling

--- a/.env
+++ b/.env
@@ -49,12 +49,11 @@ disable_fast_link=
 # （可选）
 # 默认值：空
 # 控制自定义模型，使用 + 添加自定义模型，使用 - 隐藏模型，使用 name=displayName 自定义模型名称，以逗号分隔。
-CUSTOM_MODELS=-all,gpt-4o-mini,gpt-4o,qwen-max,glm-4-plus,dall-e-3,claude-3-5-sonnet-20240620,deepseek-ai/DeepSeek-V2.5=DeepSeek-V2.5,gemini-1.5-pro-latest,llama-3.1-sonar-huge-128k-online=llama-online,meta-llama/Meta-Llama-3.1-405B-Instruct=Meta-Llama-3.1-405B,nvidia/Nemotron-4-340B-Instruct=Nemotron-4-340B-Instruct
-
+CUSTOM_MODELS=
 # （可选）
 # 默认值：空
 # 更改默认模型
-DEFAULT_MODEL=gpt-4o-mini
+DEFAULT_MODEL=
 
 # anthropic claude Api Key.（可选）
 anthropic_api_key=
